--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://vinship:dingalingo@cluster0.nybr4.mongodb.net/sample_mflix.movies
+MONGODB_URI="mongodb+srv://vinship:dingalingo@cluster0.nybr4.mongodb.net/sample_mflix.movies"
